--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,7 @@
     "html2canvas": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-loader-spinner": "^6.1.6",
     "react-scripts": "5.0.1",
     "react-use-websocket": "^4.11.0",
     "recharts": "^2.13.0-alpha.5",
